adding memory and disk stats